--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@reduxjs/toolkit": "^2.2.5",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "styled-components": "^6.1.11",
     "yup": "^1.4.0"
@@ -26,6 +30,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "react-error-overlay": "^6.0.9",
     "vite": "^5.2.0"
   }
 }
