--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_FIREBASE_PROJECT_ID = nanny-services-f76f6
 VITE_FIREBASE_STORAGE_BUCKET = nanny-services-f76f6.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID = 1052537709950
 VITE_FIREBASE_APP_ID = 1:1052537709950:web:fee5a90019fef8b74ebf2f
+VITE_FIREBASE_DATABASE_URL = https://nanny-services-f76f6-default-rtdb.asia-southeast1.firebasedatabase.app
