--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.11",
+    "toastify-js": "^1.12.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
